<?xml version="1.0"?>
<package format="3">
  <name>cras_cpp_common</name>
  <version>2.5.1</version>
  <description>A Czech-army knife for ROS code written in C++.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/cras_cpp_common</url>
  <url type="bugtracker">https://github.com/ctu-vras/ros-utils/issues</url>
  <url type="repository">https://github.com/ctu-vras/ros-utils</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

<!--  <test_depend>python3-catkin-lint</test_depend>-->
<!--  <test_depend>roslaunch</test_depend>-->
<!--  <test_depend>roslint</test_depend>-->
<!--  <test_depend>rostest</test_depend>-->

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

</package>
