<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
SPDX-License-Identifier: BSD-3-Clause
SPDX-FileCopyrightText: Czech Technical University in Prague
-->
<package format="3">
  <name>cras_cpp_common</name>
  <version>3.0.0</version>
  <description>A Czech-army knife for ROS code written in C++.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/cras_cpp_common</url>
  <url type="bugtracker">https://github.com/ctu-vras/ros-utils/issues</url>
  <url type="repository">https://github.com/ctu-vras/ros-utils</url>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>fmt</depend>
  <depend>libexpected-dev</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <build_depend>backward_ros</build_depend>
  <build_depend>libboost-dev</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>backward_ros</exec_depend>
  <exec_depend>language-pack-en</exec_depend>  <!-- Needed to get en_US.UTF-8 locale -->
  <exec_depend>libboost-dev</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>cras_lint</test_depend>
  <test_depend>eigen</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>tf2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
