<?xml version="1.0"?>
<package format="2">
  <name>cras_nodelet_topic_tools</name>
  <version>1.0.0</version>
  <description>topic_tools in nodelets</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
  </export>
</package>
